fix bug of volvelles not rotating because divs are covering oneanother up, place masks as last in list, decrease font size of links at the bottom of the page, decrease font size of Pedro's name, change background color of page

--- a/assets/css/volvelle-image.css
+++ b/assets/css/volvelle-image.css
@@ -7,7 +7,7 @@
 
 body
 {
-  background: pink;
+  background: #ece7d9;
 }
 
 #volvelle-canvas{
@@ -21,6 +21,7 @@ body
   margin: 0px auto 0 auto;
   width: 2000px;
   margin-left: -757px;
+  z-index: 1000;
 }
 
 #puzzle-canvas-wrapper-img{
